# ai-cli

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
client/: index.html  script.js  styles.css
client-react/: README.md  package-lock.json  package.json
client-react/src/: App.css  App.tsx
client-react/src/components/: ChatInterface.tsx  ContextMenu.tsx  ErrorToast.tsx  FileOperationDisplay.tsx  Header.tsx  InlineToolApproval.tsx  LoadingOverlay.tsx  ProjectModal.tsx  ProjectSelection.tsx  SettingEditor.tsx  Settings.tsx  ToolApproval.tsx  ToolResults.tsx
client-react/src/context/: AppContext.tsx
client-react/src/services/: api.ts
client-react/src/types/: index.ts
server/: .dockerignore  Dockerfile.test  docker-compose.test.yml  main.py  main_old.py  pytest.ini  requirements.txt  run_tests.py  test-requirements.txt
server/core/: base_provider.py  base_types.py  chat_manager.py  session_manager.py
server/memory/: chat_memory.py
server/providers/: echo_test_provider.py  gemini_provider.py
server/routes/: __init__.py  basic.py  chat.py  chat_memory.py  projects.py  settings.py
server/scripts/: run-tests.sh
server/tests/: __init__.py  conftest.py
server/tests/fixtures/: sample_commands.py  test_projects.py
server/tests/test_tools/: __init__.py  test_edit_file_tool.py  test_read_file_tool.py  test_run_command_tool.py  (+1 more)
server/tools/: base_tool.py  tool_manager.py
src/: index.ts
src/ai_cli/: __init__.py  cli.py  config.py  ui.py
src/client/: api.ts  index.ts  tool-types.ts  types.ts
(+19 files in other folders)
