[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli"
version = "0.1.0"
description = "AI-powered CLI tool for code development"
authors = [{name = "Andriy", email = "andriy@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "ollama>=0.3.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ai-cli = "ai_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"